# ocr-agent

./: .dockerignore  .env.example  .gitignore  README.md  compose.yaml  requirements.base.txt  requirements.dev.txt
docker/: Dockerfile
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  LogViewer.tsx  PreviewPanel.tsx  main.tsx  styles.css  tauri_env.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/src/: main.rs  watch_folder.rs
src/ocr_agent/: __init__.py  cli.py  config.py  deepseek_ocr2_runner.py  input_discovery.py  markdown_merge.py  pdf_render.py  queue_store.py
tests/: test_synthetic_ocr.py
tools/: generate_text_image.py
